--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ button:hover {
 }
 
 .menu-card {
-  margin: 2em 0em 2em 0em;
+  margin: 2.5em 0em 2em 0em;
   width: 100%;
 }
 @media screen and (max-width: 990px) {
@@ -498,16 +498,23 @@ button:hover {
   background-image: url("../../assets/restaurants/sens.jpg");
 }
 
+.header-restaurant {
+  box-shadow: none;
+}
+.header-restaurant h1 {
+  display: none;
+}
+
 .restaurant-details__image {
   width: 100%;
-  height: 19em;
+  height: 20em;
   max-height: 100%;
   background-size: cover;
   background-position: center;
 }
 .restaurant-details__menu {
   background-color: #f6f6f6;
-  padding: 2em 2em 1em 2em;
+  padding: 3em 2em 1em 2em;
   border-radius: 20px 20px 0px 0px;
   margin-top: -2em;
 }
