--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -14,17 +14,24 @@
     background-image: url("../../assets/restaurants/sens.jpg");
 }
 
+.header-restaurant {
+    box-shadow: none;
+    h1 {
+        display: none;
+    }
+}
+
 .restaurant-details {
     &__image {
         width: 100%;
-        height: 19em;
+        height: 20em;
         max-height: 100%;
         background-size: cover;
         background-position: center;
     }
     &__menu {
         background-color: $background-pale;
-        padding: 2em 2em 1em 2em;
+        padding: 3em 2em 1em 2em;
         border-radius: 20px 20px 0px 0px;
         margin-top: -2em;
         @include mobile-only {
